update til class class